testsuite/tests/overloadedrecflds/should_compile/T21625B.hs
{-# LANGUAGE DuplicateRecordFields #-}

module T21625B where

data B = B {f :: Int}
data C = C {f :: Char}
