testsuite/tests/overloadedrecflds/should_fail/T14953_B.hs
{-# LANGUAGE DuplicateRecordFields #-}
module T14953_B where
data R = R {unR :: Int}
